-- phpMyAdmin SQL Dump
-- version 5.2.3
-- https://www.phpmyadmin.net/
--
-- Hôte : mysql
-- Généré le : dim. 30 août 2026 à 11:32
-- Version du serveur : 8.0.45
-- Version de PHP : 8.3.26

SET SQL_MODE = "NO_AUTO_VALUE_ON_ZERO";
START TRANSACTION;
SET time_zone = "+00:00";


/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;
/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;
/*!40101 SET NAMES utf8mb4 */;

--
-- Base de données : `asv_db`
--

-- --------------------------------------------------------

--
-- Structure de la table `animals`
--

CREATE TABLE `animals` (
  `id` varchar(36) COLLATE utf8mb4_unicode_ci NOT NULL,
  `nom` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `espece` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `race` varchar(255) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `date_naissance` date DEFAULT NULL,
  `remarques` longtext COLLATE utf8mb4_unicode_ci,
  `proprietaire_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `created_by` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `created_at` datetime NOT NULL,
  `clinic_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Structure de la table `clinics`
--

CREATE TABLE `clinics` (
  `id` varchar(36) COLLATE utf8mb4_unicode_ci NOT NULL,
  `name` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `created_at` datetime NOT NULL,
  `type` varchar(50) COLLATE utf8mb4_unicode_ci NOT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Structure de la table `doctrine_migration_versions`
--

CREATE TABLE `doctrine_migration_versions` (
  `version` varchar(191) NOT NULL,
  `executed_at` datetime DEFAULT NULL,
  `execution_time` int DEFAULT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

--
-- Déchargement des données de la table `doctrine_migration_versions`
--

INSERT INTO `doctrine_migration_versions` (`version`, `executed_at`, `execution_time`) VALUES
('DoctrineMigrations\\Version20260301000000', '2026-08-30 11:26:07', 194),
('DoctrineMigrations\\Version20260310141259', '2026-08-30 11:26:07', 96),
('DoctrineMigrations\\Version20260310200000', '2026-08-30 11:26:08', 350),
('DoctrineMigrations\\Version20260317000000', '2026-08-30 11:26:08', 42),
('DoctrineMigrations\\Version20260317000001', '2026-08-30 11:26:08', 43),
('DoctrineMigrations\\Version20260317000002', '2026-08-30 11:26:08', 81),
('DoctrineMigrations\\Version20260318151137', '2026-08-30 11:26:08', 32),
('DoctrineMigrations\\Version20260328140532', '2026-08-30 11:26:08', 55),
('DoctrineMigrations\\Version20260401080944', '2026-08-30 11:26:08', 535),
('DoctrineMigrations\\Version20260408104822', '2026-08-30 11:26:09', 210),
('DoctrineMigrations\\Version20260408123306', '2026-08-30 11:26:09', 109),
('DoctrineMigrations\\Version20260409085625', '2026-08-30 11:26:09', 40),
('DoctrineMigrations\\Version20260413103000', '2026-08-30 11:26:09', 44);

-- --------------------------------------------------------

--
-- Structure de la table `medical_consultations`
--

CREATE TABLE `medical_consultations` (
  `id` varchar(36) COLLATE utf8mb4_unicode_ci NOT NULL,
  `animal_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `date_consultation` datetime NOT NULL,
  `veterinaire_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `motif` longtext COLLATE utf8mb4_unicode_ci NOT NULL,
  `compte_rendu` longtext COLLATE utf8mb4_unicode_ci,
  `traitements` longtext COLLATE utf8mb4_unicode_ci,
  `created_at` datetime NOT NULL,
  `clinic_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Structure de la table `messenger_messages`
--

CREATE TABLE `messenger_messages` (
  `id` bigint NOT NULL,
  `body` longtext NOT NULL,
  `headers` longtext NOT NULL,
  `queue_name` varchar(190) NOT NULL,
  `created_at` datetime NOT NULL,
  `available_at` datetime NOT NULL,
  `delivered_at` datetime DEFAULT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;

-- --------------------------------------------------------

--
-- Structure de la table `owners`
--

CREATE TABLE `owners` (
  `id` varchar(36) COLLATE utf8mb4_unicode_ci NOT NULL,
  `nom` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `prenom` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `adresse` longtext COLLATE utf8mb4_unicode_ci,
  `telephone` varchar(50) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `email` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `created_by` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `created_at` datetime NOT NULL,
  `user_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Structure de la table `owner_clinic`
--

CREATE TABLE `owner_clinic` (
  `owner_id` varchar(36) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  `clinic_id` varchar(36) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

-- --------------------------------------------------------

--
-- Structure de la table `users`
--

CREATE TABLE `users` (
  `id` varchar(36) COLLATE utf8mb4_unicode_ci NOT NULL,
  `email` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `name` varchar(255) COLLATE utf8mb4_unicode_ci NOT NULL,
  `role` varchar(20) COLLATE utf8mb4_unicode_ci NOT NULL,
  `created_at` datetime NOT NULL,
  `password` varchar(255) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `clinic_id` varchar(36) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  `is_vet` tinyint(1) NOT NULL DEFAULT '0'
) ;

-- --------------------------------------------------------

--
-- Structure de la table `user_clinic`
--

CREATE TABLE `user_clinic` (
  `user_id` varchar(36) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  `clinic_id` varchar(36) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

--
-- Index pour les tables déchargées
--

--
-- Index pour la table `animals`
--
ALTER TABLE `animals`
  ADD PRIMARY KEY (`id`),
  ADD KEY `IDX_966C69DD76C50E4A` (`proprietaire_id`),
  ADD KEY `IDX_966C69DDDE12AB56` (`created_by`),
  ADD KEY `IDX_966C69DDCC22AD4` (`clinic_id`);

--
-- Index pour la table `clinics`
--
ALTER TABLE `clinics`
  ADD PRIMARY KEY (`id`),
  ADD UNIQUE KEY `UNIQ_D7053B665E237E06` (`name`);

--
-- Index pour la table `doctrine_migration_versions`
--
ALTER TABLE `doctrine_migration_versions`
  ADD PRIMARY KEY (`version`);

--
-- Index pour la table `medical_consultations`
--
ALTER TABLE `medical_consultations`
  ADD PRIMARY KEY (`id`),
  ADD KEY `IDX_F9050EB18E962C16` (`animal_id`),
  ADD KEY `IDX_F9050EB15C80924` (`veterinaire_id`),
  ADD KEY `IDX_F9050EB1CC22AD4` (`clinic_id`);

--
-- Index pour la table `messenger_messages`
--
ALTER TABLE `messenger_messages`
  ADD PRIMARY KEY (`id`),
  ADD KEY `IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750` (`queue_name`,`available_at`,`delivered_at`,`id`);

--
-- Index pour la table `owners`
--
ALTER TABLE `owners`
  ADD PRIMARY KEY (`id`),
  ADD KEY `IDX_427292FADE12AB56` (`created_by`),
  ADD KEY `IDX_427292FAA76ED395` (`user_id`);

--
-- Index pour la table `owner_clinic`
--
ALTER TABLE `owner_clinic`
  ADD PRIMARY KEY (`owner_id`,`clinic_id`),
  ADD KEY `IDX_A279D4EA7E3C61F9` (`owner_id`),
  ADD KEY `IDX_A279D4EACC22AD4` (`clinic_id`);

--
-- Index pour la table `users`
--
ALTER TABLE `users`
  ADD PRIMARY KEY (`id`),
  ADD UNIQUE KEY `uniq_user_email_clinic` (`email`,`clinic_id`),
  ADD KEY `IDX_1483A5E9CC22AD4` (`clinic_id`);

--
-- Index pour la table `user_clinic`
--
ALTER TABLE `user_clinic`
  ADD PRIMARY KEY (`user_id`,`clinic_id`),
  ADD KEY `IDX_62D1E389A76ED395` (`user_id`),
  ADD KEY `IDX_62D1E389CC22AD4` (`clinic_id`);

--
-- AUTO_INCREMENT pour les tables déchargées
--

--
-- AUTO_INCREMENT pour la table `messenger_messages`
--
ALTER TABLE `messenger_messages`
  MODIFY `id` bigint NOT NULL AUTO_INCREMENT;

--
-- Contraintes pour les tables déchargées
--

--
-- Contraintes pour la table `animals`
--
ALTER TABLE `animals`
  ADD CONSTRAINT `FK_966C69DD76C50E4A` FOREIGN KEY (`proprietaire_id`) REFERENCES `owners` (`id`) ON DELETE SET NULL,
  ADD CONSTRAINT `FK_966C69DDDE12AB56` FOREIGN KEY (`created_by`) REFERENCES `users` (`id`) ON DELETE SET NULL,
  ADD CONSTRAINT `FK_ANIMALS_CLINIC` FOREIGN KEY (`clinic_id`) REFERENCES `clinics` (`id`) ON DELETE SET NULL;

--
-- Contraintes pour la table `medical_consultations`
--
ALTER TABLE `medical_consultations`
  ADD CONSTRAINT `FK_CONSULTATIONS_CLINIC` FOREIGN KEY (`clinic_id`) REFERENCES `clinics` (`id`) ON DELETE SET NULL,
  ADD CONSTRAINT `FK_F9050EB15C80924` FOREIGN KEY (`veterinaire_id`) REFERENCES `users` (`id`) ON DELETE SET NULL,
  ADD CONSTRAINT `FK_F9050EB18E962C16` FOREIGN KEY (`animal_id`) REFERENCES `animals` (`id`) ON DELETE SET NULL;

--
-- Contraintes pour la table `owners`
--
ALTER TABLE `owners`
  ADD CONSTRAINT `FK_427292FAA76ED395` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE SET NULL,
  ADD CONSTRAINT `FK_427292FADE12AB56` FOREIGN KEY (`created_by`) REFERENCES `users` (`id`) ON DELETE SET NULL;

--
-- Contraintes pour la table `owner_clinic`
--
ALTER TABLE `owner_clinic`
  ADD CONSTRAINT `FK_A279D4EA7E3C61F9` FOREIGN KEY (`owner_id`) REFERENCES `owners` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `FK_A279D4EACC22AD4` FOREIGN KEY (`clinic_id`) REFERENCES `clinics` (`id`) ON DELETE CASCADE;

--
-- Contraintes pour la table `users`
--
ALTER TABLE `users`
  ADD CONSTRAINT `FK_USERS_CLINIC` FOREIGN KEY (`clinic_id`) REFERENCES `clinics` (`id`) ON DELETE SET NULL;

--
-- Contraintes pour la table `user_clinic`
--
ALTER TABLE `user_clinic`
  ADD CONSTRAINT `FK_62D1E389A76ED395` FOREIGN KEY (`user_id`) REFERENCES `users` (`id`) ON DELETE CASCADE,
  ADD CONSTRAINT `FK_62D1E389CC22AD4` FOREIGN KEY (`clinic_id`) REFERENCES `clinics` (`id`) ON DELETE CASCADE;
COMMIT;

/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
